@@ -99,6 +99,8 @@ object TestUtils {
                 "java",
                 "-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image",
                 "-Duser.home=${System.getProperty("user.home")}",
+                "--enable-native-access=ALL-UNNAMED",
+                "--sun-misc-unsafe-memory-access=allow",
                 "-jar",
                 jarPath,
             )
